--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -27,6 +27,12 @@ configure_file(config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h @ONLY)
 
 add_executable(ralph_client ${SRC})
 target_include_directories(ralph_client PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(ralph_client PRIVATE ralph_common ralph_clientlib)
+target_link_libraries(ralph_client PRIVATE ralph_common ralph_clientlib ralph_cmake_integration)
 target_link_libraries(ralph_client PRIVATE pthread) # wat? why do I need this?
-set_target_properties(ralph_client PROPERTIES OUTPUT_NAME ralph)
+set_target_properties(ralph_client PROPERTIES
+	OUTPUT_NAME ralph
+	INSTALL_RPATH "$ORIGIN/../lib"
+	INSTALL_RPATH_USE_LINK_PATH TRUE
+)
+
+install(TARGETS ralph_client DESTINATION bin COMPONENT Runtime)
