--- a/clientlib/resources/CMakeLists.txt.template
+++ b/clientlib/resources/CMakeLists.txt.template
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.0)
 
 project(@PROJECT_NAME@)
 
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+include(ralph)
+ralph_load()
+
 set(@PROJECT_NAME@_SRC
 	main.cpp
 )
